GMM_Main/src/objects/Panel_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>it is a lookup to Application object to find particular Application</description>
        <label>Application</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expert_Review_Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup to Expert Review panel object to find an Expert Review Panel</description>
        <label>Expert Review Panel</label>
        <referenceTo>Expert_Review_Panel__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_Id_Application_Id__c</fullName>
        <label>Panel Id Application Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Paneling__c</fullName>
        <label>Paneling</label>
        <referenceTo>Paneling__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Panel Application</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Panel Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panel Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>